# booster_motion

./: CMakeLists.txt  package.xml
include/booster_motion/: joint_maps.hpp  motor_state_manager.hpp  rpc_client.hpp
src/: main.cpp  motor_state_manager.cpp  read_joints.cpp  rpc_client.cpp
