<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>booster_motion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shikajiko@github.com">Riyan Fadli Amazzadin</maintainer>
  <license>MIT license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>booster_interface</depend>
  <depend>booster_client_interface</depend>
  <depend>booster_joint_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
